kubernetes/apps/ai/bifrost/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bifrost-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bifrost
  egress:
    - toEndpoints:
        - {}
    - toCIDRSet:
        - cidr: 192.168.2.0/24
      toPorts:
        - ports:
            - port: "8080"
    - toFQDNs:
        - matchName: www.getbifrost.ai
        - matchName: getbifrost.ai
      toPorts:
        - ports:
            - port: "443"
